--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>歯のモデルとりあえず</title>
     <meta property="og:url" content="https://goonruntongue.github.io/dental-model-test/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="歯のモデルとりあえず">
-    <meta property="og:description" content="歯のモデルとりあえず">
+    <meta property="og:title" content="歯のモデルのとりあえずのやっつけです。">
+    <meta property="og:description" content="歯のモデルのとりあえずのやっつけです。">
     <meta property="og:image" content="https://goonruntongue.github.io/dental-model-test/screenshot.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="歯のモデルとりあえず">
-    <meta name="twitter:description" content="歯のモデルとりあえず">
+    <meta name="twitter:title" content="歯のモデルのとりあえずのやっつけです。">
+    <meta name="twitter:description" content="歯のモデルのとりあえずのやっつけです。">
     <meta name="twitter:image" content="https://goonruntongue.github.io/dental-model-test/screenshot.png">
 </head>
 
